--- a/Valladolid2017/stochprog/farmer.ipynb
+++ b/Valladolid2017/stochprog/farmer.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -25,10 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Model parameters\n",
@@ -71,31 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "******************************************************************************\n",
-      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
-      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
-      "         For more information visit http://projects.coin-or.org/Ipopt\n",
-      "******************************************************************************\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        ":Optimal"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,23 +92,21 @@
     "@variable(m, w[S,P] >= 0)    # crops sold;\n",
     "@variable(m, cost[s in S])   # per scenario cost\n",
     "\n",
-    "@constraint(m, varcost[s in S], cost[s] == sum{prcost[j]*x[j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P}) \n",
-    "@constraint(m, cap[s in S], sum{x[j], j in P} <= 500)\n",
+    "@constraint(m, varcost[s in S], cost[s] == sum(prcost[j]*x[j] + pcost[j]*y[s,j] - scost[j]*w[s,j] for j in P) )\n",
+    "@constraint(m, cap[s in S], sum(x[j] for j in P) <= 500)\n",
     "@constraint(m, bal[s in S,j in P], yield[s,j]*x[j]+y[s,j]-w[s,j] >= demand[j]) \n",
     "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
     "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
     "\n",
-    "@objective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "@objective(m, Min, (1/NS)*sum(cost[s] for s in S))\n",
     "\n",
     "solve(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -135,7 +116,6 @@
       "[1] = 220.00000380025003\n",
       "[2] = 79.99999920015239\n",
       "[3] = 200.00000199955198\n",
-      "\n",
       "\n",
       "y: 2 dimensions:\n",
       "[1,:]\n",
@@ -159,7 +139,6 @@
       "  [5,2] = 0.0\n",
       "  [5,3] = 5.4591602227690745e-9\n",
       "\n",
-      "\n",
       "w: 2 dimensions:\n",
       "[1,:]\n",
       "  [1,1] = 350.0000114907356\n",
@@ -182,14 +161,12 @@
       "  [5,2] = 0.0\n",
       "  [5,3] = 6000.000059999594\n",
       "\n",
-      "\n",
       "cost: 1 dimensions:\n",
       "[1] = -28100.001770977455\n",
       "[2] = -64100.002130901\n",
       "[3] = -100100.0024908174\n",
       "[4] = -136100.0028507383\n",
       "[5] = -172100.00321042986\n",
-      "\n",
       "\n",
       "obj -100100.00249077281\n"
      ]
@@ -210,10 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -221,7 +196,7 @@
        ":Optimal"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,27 +207,25 @@
     "\n",
     "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
     "@variable(m, y[S,P] >= 0)    # crops purchase\n",
-    "@variable(m, w[S,P] >= 0)    # crops sold;\n",
+    "@variable(m, w[S,P] >= 0)    # crops sold\n",
     "@variable(m, cost[s in S])   # per scenario cost\n",
     "\n",
-    "@constraint(m, varcost[s in S], cost[s] == sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P}) \n",
-    "@constraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
+    "@constraint(m, varcost[s in S], cost[s] == sum(prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j] for j in P)) \n",
+    "@constraint(m, cap[s in S], sum(x[s,j] for j in P) <= 500)\n",
     "@constraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
     "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
     "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
     "@constraint(m, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
     "\n",
-    "@objective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "@objective(m, Min, (1/NS)*sum(cost[s] for s in S))\n",
     "\n",
     "solve(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -280,7 +253,6 @@
       "  [5,2] = 79.99999920015239\n",
       "  [5,3] = 200.0000020000673\n",
       "\n",
-      "\n",
       "y: 2 dimensions:\n",
       "[1,:]\n",
       "  [1,1] = 0.0\n",
@@ -302,7 +274,6 @@
       "  [5,1] = 0.0\n",
       "  [5,2] = 0.0\n",
       "  [5,3] = 0.0\n",
-      "\n",
       "\n",
       "w: 2 dimensions:\n",
       "[1,:]\n",
@@ -326,14 +297,12 @@
       "  [5,2] = 0.0\n",
       "  [5,3] = 6000.000059999594\n",
       "\n",
-      "\n",
       "cost: 1 dimensions:\n",
       "[1] = -28100.001770180523\n",
       "[2] = -64100.00213019264\n",
       "[3] = -100100.00249020477\n",
       "[4] = -136100.00285021687\n",
       "[5] = -172100.00321015422\n",
-      "\n",
       "\n",
       "obj -100100.00249018983\n"
      ]
@@ -356,17 +325,17 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.4.5",
+   "display_name": "Julia 0.5.0",
    "language": "julia",
-   "name": "julia-0.4"
+   "name": "julia-0.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.5"
+   "version": "0.5.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
