--- a/Valladolid2017/stochprog/farmercvar.ipynb
+++ b/Valladolid2017/stochprog/farmercvar.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -25,10 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Model parameters\n",
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -84,10 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -95,7 +91,7 @@
        ":Optimal"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,28 +105,26 @@
     "@variable(m, w[S,P] >= 0)    # crops sold;\n",
     "@variable(m, phi[S] >= 0)    # cvar auxiliary variable\n",
     "@variable(m, VaR)            # cvar auxiliary variable\n",
-    "@expression(m, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
+    "@expression(m, Cost[s in S], sum(prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j] for j in P))\n",
     "@variable(m, cost[s in S])\n",
     "\n",
     "@constraint(m, varcost[s in S], cost[s] == Cost[s]) \n",
-    "@constraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
+    "@constraint(m, cap[s in S], sum(x[s,j] for j in P) <= 500)\n",
     "@constraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j])\n",
     "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
     "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
     "@constraint(m, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
     "@constraint(m, cvar[s in S], cost[s]-VaR <= phi[s])\n",
     "\n",
-    "@objective(m, Min, VaR + (1/NS)*sum{(1/alpha)*phi[s], s in S})\n",
+    "@objective(m, Min, VaR + (1/NS)*sum((1/alpha)*phi[s] for s in S))\n",
     " \n",
     "solve(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -158,7 +152,6 @@
       "  [5,2] = 79.99999920014328\n",
       "  [5,3] = 240.00000239986792\n",
       "\n",
-      "\n",
       "y: 2 dimensions:\n",
       "[1,:]\n",
       "  [1,1] = 0.0\n",
@@ -180,7 +173,6 @@
       "  [5,1] = 0.0\n",
       "  [5,2] = 0.0\n",
       "  [5,3] = 0.0\n",
-      "\n",
       "\n",
       "w: 2 dimensions:\n",
       "[1,:]\n",
@@ -204,14 +196,12 @@
       "  [5,2] = 0.0\n",
       "  [5,3] = 6000.00005999917\n",
       "\n",
-      "\n",
       "cost: 1 dimensions:\n",
       "[1] = -21100.00170022757\n",
       "[2] = -64300.00213220606\n",
       "[3] = -107500.00256418448\n",
       "[4] = -150700.00299613448\n",
       "[5] = -150700.00299616423\n",
-      "\n",
       "\n",
       "obj: -85900.0023481856\n"
      ]
@@ -234,17 +224,17 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.4.5",
+   "display_name": "Julia 0.5.0",
    "language": "julia",
-   "name": "julia-0.4"
+   "name": "julia-0.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.5"
+   "version": "0.5.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
