--- a/Valladolid2017/stochprog/farmerdet.ipynb
+++ b/Valladolid2017/stochprog/farmerdet.ipynb
@@ -26,9 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Model parameters\n",
@@ -75,9 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -109,18 +105,18 @@
     "\n",
     "@variable(mp, x[S,P] >= 0)    # acres devoted to crops\n",
     "@variable(mp, y[S,P] >= 0)    # crops purchase\n",
-    "@variable(mp, w[S,P] >= 0)    # crops sold;\n",
-    "@expression(mp, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
+    "@variable(mp, w[S,P] >= 0)    # crops sold\n",
+    "@expression(mp, Cost[s in S], sum(prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j] for j in P))\n",
     "@variable(mp, cost[s in S])\n",
     "\n",
     "@constraint(mp, varcost[s in S], cost[s] == Cost[s]) \n",
-    "@constraint(mp, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
+    "@constraint(mp, cap[s in S], sum(x[s,j] for j in P) <= 500)\n",
     "@constraint(mp, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
     "@constraint(mp, sellb[s in S], w[s,3] <= 6000)\n",
     "@constraint(mp, buyb[s in S], y[s,3] <= 0)\n",
     "@constraint(mp, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
     "\n",
-    "@objective(mp, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "@objective(mp, Min, (1/NS)*sum(cost[s] for s in S))\n",
     "\n",
     "solve(mp)"
    ]
@@ -135,9 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "xs = getvalue(x); "
@@ -146,21 +140,8 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       ":Optimal"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# set actual random data\n",
     "yield[1,3] = 10;\n",
@@ -173,16 +154,16 @@
     "m = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
     "@variable(m, y[S,P] >= 0)    # crops purchase\n",
-    "@variable(m, w[S,P] >= 0)    # crops sold;\n",
+    "@variable(m, w[S,P] >= 0)    # crops sold\n",
     "@variable(m, cost[s in S])\n",
     "\n",
-    "@expression(m, Cost[s in S], sum{prcost[j]*xs[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
+    "@expression(m, Cost[s in S], sum(prcost[j]*xs[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j] for j in P))\n",
     "@constraint(m, varcost[s in S], cost[s] == Cost[s]) \n",
     "@constraint(m, bal[s in S,j in P], yield[s,j]*xs[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
     "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
     "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
     "\n",
-    "@objective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "@objective(m, Min, (1/NS)*sum(cost[s] for s in S))\n",
     "\n",
     "solve(m)"
    ]
@@ -190,9 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -220,7 +199,6 @@
       "  [5,2] = 79.99999920015239\n",
       "  [5,3] = 300.00000299995565\n",
       "\n",
-      "\n",
       "y = y: 2 dimensions:\n",
       "[1,:]\n",
       "  [1,1] = 0.0\n",
@@ -242,7 +220,6 @@
       "  [5,1] = 0.0\n",
       "  [5,2] = 2.3798087768711324e-6\n",
       "  [5,3] = 1.608959349234551e-20\n",
-      "\n",
       "\n",
       "w = w: 2 dimensions:\n",
       "[1,:]\n",
@@ -266,14 +243,12 @@
       "  [5,2] = 0.0\n",
       "  [5,3] = 6000.000059999652\n",
       "\n",
-      "\n",
       "cost = cost: 1 dimensions:\n",
       "[1] = -10600.00200367929\n",
       "[2] = -64600.003083671065\n",
       "[3] = -118600.00200334766\n",
       "[4] = -118600.00200334768\n",
       "[5] = -118600.00200334768\n",
-      "\n",
       "\n",
       "obj: -86200.00221947869\n"
      ]
@@ -296,17 +271,17 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.4.5",
+   "display_name": "Julia 0.5.0",
    "language": "julia",
-   "name": "julia-0.4"
+   "name": "julia-0.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.5"
+   "version": "0.5.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
