--- a/Valladolid2017/stochprog/farmerws.ipynb
+++ b/Valladolid2017/stochprog/farmerws.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -25,10 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Model parameters\n",
@@ -78,18 +76,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "******************************************************************************\n",
+      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
+      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
+      "         For more information visit http://projects.coin-or.org/Ipopt\n",
+      "******************************************************************************\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        ":Optimal"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,29 +109,27 @@
     "\n",
     "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
     "@variable(m, y[S,P] >= 0)    # crops purchase\n",
-    "@variable(m, w[S,P] >= 0)    # crops sold;\n",
-    "@expression(m, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
+    "@variable(m, w[S,P] >= 0)    # crops sold\n",
+    "@expression(m, Cost[s in S], sum(prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j] for j in P))\n",
     "@variable(m, cost[s in S])\n",
     "\n",
     "@constraint(m, varcost[s in S], cost[s] == Cost[s]) \n",
-    "@constraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
+    "@constraint(m, cap[s in S], sum(x[s,j] for j in P) <= 500)\n",
     "@constraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
     "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
     "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
     "\n",
     "@constraint(m, nonant[s in S,j in P], x[1,j] == x[s,j]) # non-anticipativity constraints\n",
     "\n",
-    "@objective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "@objective(m, Min, (1/NS)*sum(cost[s] for s in S))\n",
     "\n",
     "solve(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -150,7 +157,6 @@
       "  [5,2] = 79.99999920015239\n",
       "  [5,3] = 200.0000020000673\n",
       "\n",
-      "\n",
       "y: 2 dimensions:\n",
       "[1,:]\n",
       "  [1,1] = 0.0\n",
@@ -172,7 +178,6 @@
       "  [5,1] = 0.0\n",
       "  [5,2] = 0.0\n",
       "  [5,3] = 0.0\n",
-      "\n",
       "\n",
       "w: 2 dimensions:\n",
       "[1,:]\n",
@@ -196,14 +201,12 @@
       "  [5,2] = 0.0\n",
       "  [5,3] = 6000.000059999594\n",
       "\n",
-      "\n",
       "cost: 1 dimensions:\n",
       "[1] = -28100.001770180523\n",
       "[2] = -64100.00213019264\n",
       "[3] = -100100.00249020477\n",
       "[4] = -136100.00285021687\n",
       "[5] = -172100.00321015422\n",
-      "\n",
       "\n",
       "obj: -100100.00249018983\n"
      ]
@@ -231,10 +234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -242,7 +243,7 @@
        ":Optimal"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,28 +255,26 @@
     "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
     "@variable(m, y[S,P] >= 0)    # crops purchase\n",
     "@variable(m, w[S,P] >= 0)    # crops sold;\n",
-    "@expression(m, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
+    "@expression(m, Cost[s in S], sum(prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j] for j in P))\n",
     "@variable(m, cost[s in S])\n",
     "\n",
     "@constraint(m, varcost[s in S], cost[s] == Cost[s]) \n",
-    "@constraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
+    "@constraint(m, cap[s in S], sum(x[s,j] for j in P) <= 500)\n",
     "@constraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
     "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
     "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
     "\n",
     "#@constraint(m, nonant[s in S,j in P], x[1,j] == x[s,j]) # non-anticipativity constraints\n",
     "\n",
-    "@objective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "@objective(m, Min, (1/NS)*sum(cost[s] for s in S))\n",
     "\n",
     "solve(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -303,7 +302,6 @@
       "  [5,2] = 79.99999920015239\n",
       "  [5,3] = 200.0000019993749\n",
       "\n",
-      "\n",
       "y: 2 dimensions:\n",
       "[1,:]\n",
       "  [1,1] = 0.0\n",
@@ -325,7 +323,6 @@
       "  [5,1] = 0.0\n",
       "  [5,2] = 0.0\n",
       "  [5,3] = 8.765825074884802e-9\n",
-      "\n",
       "\n",
       "w: 2 dimensions:\n",
       "[1,:]\n",
@@ -349,14 +346,12 @@
       "  [5,2] = 0.0\n",
       "  [5,3] = 6000.000059999311\n",
       "\n",
-      "\n",
       "cost: 1 dimensions:\n",
       "[1] = -63100.002121413265\n",
       "[2] = -64800.002153889465\n",
       "[3] = -118600.00267570352\n",
       "[4] = -150700.0029965912\n",
       "[5] = -172100.0032105144\n",
-      "\n",
       "\n",
       "obj: -113860.00263162237\n"
      ]
@@ -379,17 +374,17 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.4.5",
+   "display_name": "Julia 0.5.0",
    "language": "julia",
-   "name": "julia-0.4"
+   "name": "julia-0.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.5"
+   "version": "0.5.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
