--- a/Valladolid2017/StochMILP/multistage_battery.ipynb
+++ b/Valladolid2017/StochMILP/multistage_battery.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -204,7 +206,7 @@
     "# Energy balance for stages 2 to 6\n",
     "@constraint(m, EnergyBalance[t in Stages[2:end], s in Scens], ebat[t,s] == ebat[t-1,s] - P[t,s]*dT)\n",
     "# Terminal condition\n",
-    "@constraint(m, TermnialSOC[t in Stages[end], s in Scens], ebat[t,s] >= terminalSOC)\n",
+    "@constraint(m, TerminalSOC[t in Stages[end], s in Scens], ebat[t,s] >= terminalSOC)\n",
     "# Power required to be purchased from grid = d[t,s]\n",
     "@constraint(m, DemandfromGrid[t in Stages, s in Scens], P[t,s] + d[t,s] == L[t,ScensSeq[s][t]])\n",
     "# Demand charge\n",
@@ -215,8 +217,10 @@
     "@constraint(m, DemandCost[s in Scens], demandcost[s] == demandrate*D[s])\n",
     "\n",
     "# Nonanticipativity: Decisions have to be same in all scenarios in the set S(n) [getLeafs(n)]\n",
-    "@constraint(m, Nonanticipativity[t in Stages[1:end-1], n in StageNodes[t], s in getLeafs(n), s1 in getLeafs(n)[1]], \n",
-    "    P[t,s] == P[t,s1])\n",
+    "@constraint(m, Nonanticipativity[t in Stages[1:end-1], \n",
+    "                                 n in StageNodes[t], \n",
+    "                                 s in getLeafs(n), \n",
+    "                                s1 in getLeafs(n)[1]], P[t,s] == P[t,s1])\n",
     "\n",
     "# For two-stage use this relaxed nonanticipativity constraint\n",
     "#@constraint(m, Nonanticipativity[t in Stages[1:1], n in StageNodes[t], s in getLeafs(n), s1 in getLeafs(n)[1]], \n",
@@ -257,7 +261,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -283,7 +289,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -309,7 +317,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -341,7 +351,9 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -373,7 +385,9 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -410,7 +424,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -439,15 +455,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.5.0",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
-   "name": "julia-0.5"
+   "name": "julia-0.4"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.5.0"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
