--- a/PlasmoShortCourse/notebooks/install_packages.ipynb
+++ b/PlasmoShortCourse/notebooks/install_packages.ipynb
@@ -10,21 +10,23 @@
    "source": [
     "Pkg.add(\"JuMP\")\n",
     "Pkg.add(\"Ipopt\")\n",
-    "Pkg.add(\"PyPlot\")"
+    "Pkg.add(\"PyPlot\")\n",
+    "Pkg.add(\"LightGraphs\")\n",
+    "push!(LOAD_PATH,\"/home/juser/PlasmoShortCourse/src\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.0-rc2",
+   "display_name": "Julia 0.5.0",
    "language": "julia",
-   "name": "julia-0.6"
+   "name": "julia-0.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.6.0"
+   "version": "0.5.0"
   }
  },
  "nbformat": 4,
