--- a/PlasmoShortCourse/notebooks/install_packages.ipynb
+++ b/PlasmoShortCourse/notebooks/install_packages.ipynb
@@ -10,9 +10,13 @@
    "source": [
     "Pkg.add(\"JuMP\")\n",
     "Pkg.add(\"Ipopt\")\n",
-    "Pkg.add(\"PyPlot\")\n",
-    "Pkg.add(\"LightGraphs\")\n",
-    "push!(LOAD_PATH,\"/home/juser/PlasmoShortCourse/src\")"
+    "#Pkg.add(\"PyPlot\")\n",
+    "#Pkg.add(\"LightGraphs\")\n",
+    "push!(LOAD_PATH,\"/home/juser/JuliaBox/PlasmoShortCourse/src\")\n",
+    "using JuMP\n",
+    "using Ipopt\n",
+    "using Plasmo\n",
+    "using PyPlot"
    ]
   }
  ],
