--- a/PlasmoShortCourse/notebooks/pipeline_network.ipynb
+++ b/PlasmoShortCourse/notebooks/pipeline_network.ipynb
@@ -25,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "using JuMP\n",
@@ -1082,7 +1084,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pressure_profile = Matrix(length(time_grid),0)\n",
