setting up for juliabox

--- a/PlasmoShortCourse/notebooks/plasmo_network.ipynb
+++ b/PlasmoShortCourse/notebooks/plasmo_network.ipynb
@@ -106,6 +106,7 @@
    },
    "outputs": [],
    "source": [
+    "push!(LOAD_PATH,\"/home/juser/JuliaBox/PlasmoShortCourse/src\")\n",
     "using JuMP\n",
     "using Ipopt\n",
     "using PyPlot\n",
@@ -152,7 +153,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "include(\"gas_components.jl\");"
