--- a/PlasmoShortCourse/notebooks/simple_plasmo.ipynb
+++ b/PlasmoShortCourse/notebooks/simple_plasmo.ipynb
@@ -48,6 +48,7 @@
    },
    "outputs": [],
    "source": [
+    "push!(LOAD_PATH,\"/home/juser/JuliaBox/PlasmoShortCourse/src\")\n",
     "import JuMP\n",
     "import Plasmo\n",
     "import Ipopt"
