--- a/PlasmoShortCourse/notebooks/single_pipeline_plasmo.ipynb
+++ b/PlasmoShortCourse/notebooks/single_pipeline_plasmo.ipynb
@@ -28,6 +28,7 @@
     }
    ],
    "source": [
+    "push!(LOAD_PATH,\"/home/juser/JuliaBox/PlasmoShortCourse/src\")\n",
     "using Plasmo\n",
     "using Ipopt\n",
     "using PyPlot"
