--- a/Valladolid2017/Formulations/install_packages.ipynb
+++ b/Valladolid2017/Formulations/install_packages.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plasmo Short Course: Getting Started\n",
-    "Run the following code to set up the rest of the tutorial."
+    "### Stochastic Programming Short Course: Getting Started\n",
+    "Victor M. Zavala & Jordan Jalving, 2017\n",
+    "\n",
+    "This script sets up packages needed"
    ]
   },
   {
