--- a/Valladolid2017/Formulations/farmer_probconstraint.ipynb
+++ b/Valladolid2017/Formulations/farmer_probconstraint.ipynb
@@ -13,8 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -26,8 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Model parameters\n",
@@ -71,8 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -143,8 +148,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -228,7 +235,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.5.0",
+   "display_name": "Julia 0.5.2",
    "language": "julia",
    "name": "julia-0.5"
   },
@@ -236,7 +243,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.5.0"
+   "version": "0.5.2"
   }
  },
  "nbformat": 4,
