--- a/Valladolid2017/install_packages.ipynb
+++ b/Valladolid2017/install_packages.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -29,6 +29,15 @@
     "using PyPlot\n",
     "using Distributions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
