run scripts with parpipsnlp

--- a/Valladolid2017/StochNLP/StochPIDTuning_Plasmo.ipynb
+++ b/Valladolid2017/StochNLP/StochPIDTuning_Plasmo.ipynb
@@ -2,16 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: MPI not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: MPI not defined",
-      ""
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[31mWARNING: JuMPNLPEvaluator is deprecated, use JuMP.NLPEvaluator instead.\u001b[0m\n",
+      " in depwarn(::String, ::Symbol) at ./deprecated.jl:64\n",
+      " in JuMPNLPEvaluator(::JuMP.Model, ::Vararg{JuMP.Model,N}) at ./deprecated.jl:30\n",
+      " in Ipopt_solve(::JuMP.Model) at /home/zavalatejeda/JuliaBox/Valladolid2017/StochNLP/Plasmo.jl/src/NetIpopt.jl:122\n",
+      " in include_string(::String, ::String) at ./loading.jl:441\n",
+      " in execute_request(::ZMQ.Socket, ::IJulia.Msg) at /home/zavalatejeda/.julia/v0.5/IJulia/src/execute_request.jl:156\n",
+      " in eventloop(::ZMQ.Socket) at /home/zavalatejeda/.julia/v0.5/IJulia/src/eventloop.jl:8\n",
+      " in (::IJulia.##13#19)() at ./task.jl:360\n",
+      "while loading In[2], in expression starting on line 79\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exception of type: OPTION_INVALID in file \"IpAlgBuilder.cpp\" at line 345:\n",
+      " Exception message: Selected linear solver MA57 not available.\n",
+      "Tried to obtain MA57 from shared library \"libhsl.so\", but the following error occured:\n",
+      "libhsl.so: cannot open shared object file: No such file or directory\n",
+      "\n",
+      "EXIT: Invalid option encountered.\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n"
      ]
     }
    ],
@@ -24,7 +45,7 @@
     "using Ipopt\n",
     "using Plasmo\n",
     "using JuMP\n",
-    "using Gadfly\n",
+    "#using Gadfly\n",
     "MPI.Init()  # Initialize MPI\n",
     "\n",
     "# sets\n",
