adding plasmo clone to install pacakges

--- a/Valladolid2017/install_packages.ipynb
+++ b/Valladolid2017/install_packages.ipynb
@@ -13,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Pkg.add(\"JuMP\")\n",
@@ -23,6 +21,8 @@
     "Pkg.add(\"Cbc\")\n",
     "Pkg.add(\"Distributions\")  \n",
     "#Pkg.add(\"PyPlot\")  \n",
+    "#Pkg.clone(\"https://github.com/jalving/Plasmo.jl\")\n",
+    "#using Plasmo\n",
     "using JuMP\n",
     "using Ipopt\n",
     "using Cbc\n",
@@ -42,7 +42,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.5.2",
+   "display_name": "Julia 0.5.0",
    "language": "julia",
    "name": "julia-0.5"
   },
@@ -50,7 +50,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.5.2"
+   "version": "0.5.0"
   }
  },
  "nbformat": 4,
