--- a/Valladolid2017/Formulations/multistage_example.ipynb
+++ b/Valladolid2017/Formulations/multistage_example.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "# Filling up all dictionaries to create scenario tree\n",
     "curnodeid = 1; # Current node id\n",
-    "push!(Nodes,curnodeid);\n",
+    "push!(Nodes,curnodeid); # append new entry to vector\n",
     "NodeStage[curnodeid] = 1;\n",
     "StageNodes[1] = [curnodeid];\n",
     "NodeChildren[1] = Vector();\n",
@@ -62,9 +62,9 @@
     "\treturn tmp;\n",
     "end\n",
     "\n",
-    "Scens = getLeafs(1); # Scens contains all node ids at last stage (originating from root node)\n",
+    "Scens = getLeafs(1); # Scens contains all node ids at last stage (originating from root node n=1)\n",
     "NScen = length(Scens); # Total number of scenarios in the tree (number of nodes in final stage of the tree)\n",
-    "ScensSeq = Dict(); # Local node ids at every stage for node in last stage \n",
+    "ScensSeq = Dict(); # Dictionary: Keys: scenario ids, Values: Local node ids (1:NS) at every stage for node in last stage \n",
     "for s in Scens\n",
     "  ScensSeq[s] = Vector(T);\n",
     "  ScensSeq[s][1] = 1;\n",
