--- a/UWMadison2017/StochMILP/PlasmoDSPexample.ipynb
+++ b/UWMadison2017/StochMILP/PlasmoDSPexample.ipynb
@@ -2,13 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding a good lower bound using Dual Decomposition...\n",
+      "\n",
+      "DUAL DECOMPOSITION ITERATION INFORMATION:\n",
+      "* master   = objective function value of the master problem.\n",
+      "* primobj  = best primal objective function value.\n",
+      "* dualobj  = best dual objective function value.\n",
+      "* a.gap(%) = Approximate gap between master and dualobj.\n",
+      "* d.gap(%) = Duality gap between primobj and dualobj.\n",
+      "* times    = wall clock time in seconds.\n",
+      "\n",
+      "  iter         master        primobj        dualobj  a.gap(%)  d.gap(%)    time\n",
+      " D   0  -3.994444e+01          Large  -3.994444e+01      0.00    100.00     0.0\n",
+      "Tr  STOP with gap tolerance +3.055334e-13 (0.00%).\n",
+      "Best lower bound -3.994444e+01, time elapsed: 0.00 sec.\n",
+      "presolving (3 rounds):\n",
+      " 0 deleted vars, 0 deleted constraints, 0 added constraints, 2 tightened bounds, 0 added holes, 0 changed sides, 0 changed coefficients\n",
+      " 0 implications, 0 cliques\n",
+      "presolved problem has 3 variables (0 bin, 2 int, 0 impl, 1 cont) and 2 constraints\n",
+      "\n",
+      " time | node  | left  |LP iter|LP it/n| mem |mdpt |frac |vars |cons |cols |rows |cuts |confs|strbr|  dualbound   | primalbound  |  gap   \n",
+      "b 0.0s|     1 |     0 |     1 |     - | 171k|   0 |   - |   3 |   2 |   3 |   1 |   1 |   0 |   0 |-3.994444e+01 |-3.994444e+01 |   0.00%\n",
+      "  0.0s|     1 |     0 |     1 |     - | 171k|   0 |   - |   3 |   2 |   3 |   1 |   1 |   0 |   0 |-3.994444e+01 |-3.994444e+01 |   0.00%\n",
+      "\n",
+      "SCIP Status        : problem is solved [optimal solution found]\n",
+      "Solving Time (sec) : 0.00\n",
+      "Solving Nodes      : 1\n",
+      "Primal Bound       : -3.99444444444444e+01 (6 solutions)\n",
+      "Dual Bound         : -3.99444444444444e+01\n",
+      "Gap                : 0.00 %\n",
+      "[5.0,5.0]\n",
+      "[0.333333,0.0,0.0,0.0]\n",
+      "[1.0,0.0,0.0,0.0]\n",
+      "[1.0,0.0,0.0,0.0]\n"
+     ]
+    }
+   ],
    "source": [
-    "using JuMP, Plasmo \n",
+    "using JuMP, Plasmo, Cbc\n",
     "\n",
     "# Comment out this line if you want to run in serial\n",
     "# using MPI\n",
@@ -52,22 +90,102 @@
     "# Comment out this line if you want to run in serial\n",
     "# MPI.Finalize()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Presolve 0 (-6) rows, 0 (-14) columns and 0 (-30) elements\n",
+      "Optimal - objective value -59.5\n",
+      "After Postsolve, objective -59.5, infeasibilities - dual 0 (0), primal 0 (0)\n",
+      "Optimal objective -59.5 - 0 iterations time 0.002, Presolve 0.00\n",
+      "Cbc0045I Warning 1 integer variables were more than 1.0e-4 away from integer\n",
+      "Cbc0045I Given objective value -64.8333, computed -59.5\n",
+      "Cbc0045I Solution with objective value -59.5 saved\n",
+      "Coin0505I Presolved problem not optimal, resolve after postsolve\n",
+      "Coin0505I Presolved problem not optimal, resolve after postsolve\n",
+      "Coin0505I Presolved problem not optimal, resolve after postsolve\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       ":Optimal"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now solve Plasmo model using Cbc solver\n",
+    "model=create_flat_graph_model(graph);\n",
+    "model.solver=CbcSolver()\n",
+    "solve(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "KeyError: key :model not found",
+     "output_type": "error",
+     "traceback": [
+      "KeyError: key :model not found",
+      "",
+      " in getindex at ./dict.jl:688 [inlined]",
+      " in getmodel(::Plasmo.PlasmoNode) at /home/zavalatejeda/.julia/v0.5/Plasmo/src/model.jl:57",
+      " in getindex(::Plasmo.PlasmoNode, ::Symbol) at /home/zavalatejeda/.julia/v0.5/Plasmo/src/model.jl:59"
+     ]
+    }
+   ],
+   "source": [
+    "gr=getgraph(model)\n",
+    "nodes=getnodes(gr)\n",
+    "master=nodes[1]\n",
+    "\n",
+    "# get first-stage variables\n",
+    "println(getvalue(master[:x]))\n",
+    "\n",
+    "# get recourse variables\n",
+    "for j in 2:length(nodes)\n",
+    "    println(getvalue(nodes[j][:y]))\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.4.5",
+   "display_name": "Julia 0.5.0",
    "language": "julia",
-   "name": "julia-0.4"
+   "name": "julia-0.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.5"
+   "version": "0.5.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
