--- a/UWMadison2017/StochMILP/farmer_Plasmo_dsp.ipynb
+++ b/UWMadison2017/StochMILP/farmer_Plasmo_dsp.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "ArgumentError: Plasmo not found in path",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: Plasmo not found in path",
+      "",
+      " in require at ./loading.jl:249"
+     ]
+    }
+   ],
    "source": [
     "using JuMP, Plasmo\n",
     "\n",
@@ -92,6 +101,35 @@
     "# Comment if want to run serial\n",
     "# MPI.Finalize();"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "ArgumentError: Plasmo not found in path",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: Plasmo not found in path",
+      "",
+      " in require at ./loading.jl:249"
+     ]
+    }
+   ],
+   "source": [
+    "using Plasmo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -108,5 +146,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
