minor change to install packages

--- a/UWMadison2017/install_packages.ipynb
+++ b/UWMadison2017/install_packages.ipynb
@@ -13,22 +13,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Pkg.add(\"JuMP\")\n",
     "Pkg.add(\"Ipopt\")\n",
     "Pkg.add(\"Cbc\")\n",
     "Pkg.add(\"Distributions\")  \n",
-    "#Pkg.add(\"PyPlot\")  \n",
-    "#Pkg.clone(\"https://github.com/jalving/Plasmo.jl\")\n",
-    "#using Plasmo\n",
+    "Pkg.clone(\"https://github.com/jalving/Plasmo.jl\")\n",
+    "\n",
+    "using Plasmo\n",
     "using JuMP\n",
     "using Ipopt\n",
     "using Cbc\n",
     "using PyPlot\n",
     "using Distributions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
