starting to refine plasmo instances

--- a/UWMadison2017/StochMILP/PlasmoDSPexample.ipynb
+++ b/UWMadison2017/StochMILP/PlasmoDSPexample.ipynb
@@ -46,11 +46,11 @@
     }
    ],
    "source": [
-    "using JuMP, Plasmo, Cbc\n",
+    "using JuMP, Plasmo\n",
     "\n",
     "# Comment out this line if you want to run in serial\n",
-    "# using MPI\n",
-    "# MPI.Init()\n",
+    " using MPI\n",
+    " MPI.Init()\n",
     "\n",
     "xi = [[7,7] [11,11] [13,13]]\n",
     "\n",
@@ -84,82 +84,11 @@
     "\n",
     "# get recourse veriables\n",
     "for node in children_nodes\n",
-    "    println(getvalue(node[:y]))\n",
+    "   println(getvalue(node[:y]))\n",
     "end\n",
     "\n",
     "# Comment out this line if you want to run in serial\n",
-    "# MPI.Finalize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Presolve 0 (-6) rows, 0 (-14) columns and 0 (-30) elements\n",
-      "Optimal - objective value -59.5\n",
-      "After Postsolve, objective -59.5, infeasibilities - dual 0 (0), primal 0 (0)\n",
-      "Optimal objective -59.5 - 0 iterations time 0.002, Presolve 0.00\n",
-      "Cbc0045I Warning 1 integer variables were more than 1.0e-4 away from integer\n",
-      "Cbc0045I Given objective value -64.8333, computed -59.5\n",
-      "Cbc0045I Solution with objective value -59.5 saved\n",
-      "Coin0505I Presolved problem not optimal, resolve after postsolve\n",
-      "Coin0505I Presolved problem not optimal, resolve after postsolve\n",
-      "Coin0505I Presolved problem not optimal, resolve after postsolve\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       ":Optimal"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# now solve Plasmo model using Cbc solver\n",
-    "model=create_flat_graph_model(graph);\n",
-    "model.solver=CbcSolver()\n",
-    "solve(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "KeyError: key :model not found",
-     "output_type": "error",
-     "traceback": [
-      "KeyError: key :model not found",
-      "",
-      " in getindex at ./dict.jl:688 [inlined]",
-      " in getmodel(::Plasmo.PlasmoNode) at /home/zavalatejeda/.julia/v0.5/Plasmo/src/model.jl:57",
-      " in getindex(::Plasmo.PlasmoNode, ::Symbol) at /home/zavalatejeda/.julia/v0.5/Plasmo/src/model.jl:59"
-     ]
-    }
-   ],
-   "source": [
-    "gr=getgraph(model)\n",
-    "nodes=getnodes(gr)\n",
-    "master=nodes[1]\n",
-    "\n",
-    "# get first-stage variables\n",
-    "println(getvalue(master[:x]))\n",
-    "\n",
-    "# get recourse variables\n",
-    "for j in 2:length(nodes)\n",
-    "    println(getvalue(nodes[j][:y]))\n",
-    "end"
+    "MPI.Finalize()"
    ]
   },
   {
