--- a/UWMadison2017/StochNLP/StochPIDTuning_PlasmoIpopt.ipynb
+++ b/UWMadison2017/StochNLP/StochPIDTuning_PlasmoIpopt.ipynb
@@ -3,9 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "\n",
     "# optimal PID controller tuning\n",
     "# Victor M. Zavala\n",
     "# UW-Madison, 2017\n",
@@ -71,7 +74,7 @@
     "@variable(master,-100<=tauD<=1000)\n",
     "\n",
     "# create array of children models\n",
-    "PIDch=Array{JuMP.Model}(NS)\n",
+    "PIDch=Array{NodeOrEdge}(NS)\n",
     "for s in 1:NS           \n",
     "           # get scenario model\n",
     "           bl = get_scenario_model(s)\n",
@@ -87,7 +90,6 @@
     "# solve with Ipopt\n",
     "PID.solver = IpoptSolver()\n",
     "solve(PID)\n",
-    "#Ipopt_solve(PID)\n",
     "#pipsnlp_solve(PID,master,PIDch)\n",
     "\n",
     "# get controller parameters\n",
@@ -99,91 +101,48 @@
     "x=zeros(NS,N)\n",
     "for s in 1:NS\n",
     "    for j=1:N\n",
-    "    x[s,j]=getvalue(getvariable(PIDch[s],:x)[j]) \n",
+    "    x[s,j]=getvalue(getindex(PIDch[s],:x)[j]) \n",
     "    end\n",
     "end\n",
     "\n",
-    "MPI.Finalize()\n"
+    "MPI.Finalize()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: plot not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: plot not defined",
-      ""
-     ]
-    }
-   ],
-   "source": [
-    "plot(x=T, y=x[1,:]')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: plot not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: plot not defined",
-      ""
-     ]
-    }
-   ],
-   "source": [
-    "plot(x=T, y=x[2,:]')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: plot not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: plot not defined",
-      ""
-     ]
-    }
-   ],
-   "source": [
-    "plot(x=T, y=x[3,:]')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "UndefVarError: plot not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: plot not defined",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "plot(T, x[1,:]')\n",
+    "plot(T, x[2,:]')\n",
+    "plot(T, x[3,:]')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.5.0",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
-   "name": "julia-0.5"
+   "name": "julia-0.4"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.5.0"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
