adding pid example

--- a/UWMadison2017/StochNLP/StochPIDTuning_PlasmoPipsNLP.ipynb
+++ b/UWMadison2017/StochNLP/StochPIDTuning_PlasmoPipsNLP.ipynb
@@ -3,12 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# optimal PID controller tuning\n",
     "# Victor M. Zavala\n",
     "# UW-Madison, 2017\n",
@@ -16,6 +13,8 @@
     "using Ipopt\n",
     "using Plasmo\n",
     "using JuMP\n",
+    "using PyPlot\n",
+    "\n",
     "MPI.Init()  # Initialize MPI\n",
     "\n",
     "# sets\n",
@@ -88,7 +87,7 @@
     "end\n",
     "\n",
     "# solve with PipsNlp\n",
-    "pipsnlp_solve(PID,master,PIDch)\n",
+    "pipsnlp_solve(PID,master_node,PIDch)\n",
     "\n",
     "# get controller parameters\n",
     "println(getvalue(Kc))\n",
@@ -108,40 +107,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: plot not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: plot not defined",
-      ""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "plot(T, x[1,:]')\n",
-    "plot(T, x[2,:]')\n",
-    "plot(T, x[3,:]')"
+    "plot(T, x[1,:]);\n",
+    "plot(T, x[2,:]);\n",
+    "plot(T, x[3,:]);\n",
+    "xlabel(\"Time\")\n",
+    "ylabel(\"x(t)\")\n",
+    "grid(\"on\")"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.4.5",
+   "display_name": "Julia 0.5.0",
    "language": "julia",
-   "name": "julia-0.4"
+   "name": "julia-0.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.5"
+   "version": "0.5.0"
   }
  },
  "nbformat": 4,
