adding stochpde and farmerlarge

--- a/UWMadison2017/StochNLP/farmerlarge_PlasmoPipsNLP.ipynb
+++ b/UWMadison2017/StochNLP/farmerlarge_PlasmoPipsNLP.ipynb
@@ -72,12 +72,15 @@
     "    @variable(bl, s[P] >= 0)\n",
     "    @linkconstraint(graph, [j in P], yield[i,j]*master[:x][j]+y[j]-w[j] - s[j] == demand[j])\n",
     "    @objective(bl, Min, 1.0/NS*sum(pcost[j]*y[j] - scost[j]*w[j] for j in P))\n",
-    "\n",
     "end\n",
+    "\n",
+    "# solve with PipsNLP\n",
     "pipsnlp_solve(graph,master_node,child_nodes)\n",
     "\n",
-    "#println(getvalue(getvariable(m, :x)))\n",
-    "#println(getvalue(getvariable(getNode(m,\"s1\"), :w)))\n",
+    "println(getvalue(x))\n",
+    "for i in 1:NS\n",
+    "    println(getvalue(getindex(child_nodes[i],:w))) \n",
+    "end\n",
     "\n",
     "MPI.Finalize()\n"
    ]
@@ -93,16 +96,17 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.5.0",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
-   "name": "julia-0.5"
+   "name": "julia-0.4"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.5.0"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
