--- a/UWMadison2017/StochMILP/PlasmoDSPexample.ipynb
+++ b/UWMadison2017/StochMILP/PlasmoDSPexample.ipynb
@@ -46,12 +46,9 @@
     }
    ],
    "source": [
-    "using JuMP, Plasmo\n",
+    "using JuMP, Plasmo,MPI\n",
     "\n",
-    "# Comment out this line if you want to run in serial\n",
-    " using MPI\n",
-    " MPI.Init()\n",
-    "\n",
+    "MPI.Init()\n",
     "xi = [[7,7] [11,11] [13,13]]\n",
     "\n",
     "# create empty Plasmo model\n",
@@ -87,7 +84,6 @@
     "   println(getvalue(node[:y]))\n",
     "end\n",
     "\n",
-    "# Comment out this line if you want to run in serial\n",
     "MPI.Finalize()"
    ]
   },
