--- a/UWMadison2017/StochMILP/PlasmoCbcexample.ipynb
+++ b/UWMadison2017/StochMILP/PlasmoCbcexample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,10 +20,6 @@
    ],
    "source": [
     "using JuMP, Plasmo, Cbc\n",
-    "\n",
-    "# Comment out this line if you want to run in serial\n",
-    "# using MPI\n",
-    "# MPI.Init()\n",
     "\n",
     "xi = [[7,7] [11,11] [13,13]]\n",
     "\n",
@@ -59,7 +55,7 @@
     "# get recourse veriables\n",
     "for node in children_nodes\n",
     "    println(getvalue(node[:y]))\n",
-    "end\n"
+    "end"
    ]
   },
   {
