--- a/UWMadison2017/StochNLP/farmer_Plasmo.ipynb
+++ b/UWMadison2017/StochNLP/farmer_Plasmo.ipynb
@@ -2,11 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 1 dimensions:\n",
+      "[1] = 220.00000380040524\n",
+      "[2] = 79.99999920015239\n",
+      "[3] = 200.0000019994332\n",
+      "w: 2 dimensions:\n",
+      "[1,:]\n",
+      "  [1,1] = 350.0000114911236\n",
+      "  [1,2] = 0.0\n",
+      "  [1,3] = 2000.0000200136421\n",
+      "[2,:]\n",
+      "  [2,1] = 350.0000114911236\n",
+      "  [2,2] = 0.0\n",
+      "  [2,3] = 3000.000030010808\n",
+      "[3,:]\n",
+      "  [3,1] = 350.0000114911236\n",
+      "  [3,2] = 0.0\n",
+      "  [3,3] = 4000.000040007975\n",
+      "[4,:]\n",
+      "  [4,1] = 350.0000114911236\n",
+      "  [4,2] = 0.0\n",
+      "  [4,3] = 5000.000050005141\n",
+      "[5,:]\n",
+      "  [5,1] = 350.0000114911236\n",
+      "  [5,2] = 0.0\n",
+      "  [5,3] = 6000.000059999594\n"
+     ]
+    }
+   ],
    "source": [
     "# Example on how to use JUMP+Ipopt and PLASMO+Ipopt\n",
     "# Yankai Cao, Jordan Jalving, Victor M. Zavala\n",
@@ -53,7 +83,7 @@
     "yield[5,3] = 30\n",
     "\n",
     "# construct problem with JuMP and solve using IPOPT\n",
-    "m = Model(solver=IpoptSolver())\n",
+    "m = Model(solver=IpoptSolver(print_level=0))\n",
     "@variable(m, x[P] >= 0)\n",
     "@variable(m, y[S,P] >= 0)\n",
     "@variable(m, w[S,P] >= 0)\n",
@@ -66,8 +96,48 @@
     "@objective(m, Min, (1/NS)*sum(cost[s] for s in S))\n",
     "solve(m)\n",
     "println(getvalue(x))\n",
-    "println(getvalue(w))\n",
-    "\n",
+    "println(getvalue(w))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating flattened graph model...\n",
+      "Finished model instantiation\n",
+      "x: 1 dimensions:\n",
+      "[1] = 220.00000379973844\n",
+      "[2] = 79.9999992003962\n",
+      "[3] = 200.00000199984163\n",
+      "w: 1 dimensions:\n",
+      "[1] = 350.00001148963344\n",
+      "[2] = 0.0\n",
+      "[3] = 2000.0000200075115\n",
+      "w: 1 dimensions:\n",
+      "[1] = 350.00001148963344\n",
+      "[2] = 0.0\n",
+      "[3] = 3000.0000300067195\n",
+      "w: 1 dimensions:\n",
+      "[1] = 350.00001148963344\n",
+      "[2] = 0.0\n",
+      "[3] = 4000.000040005928\n",
+      "w: 1 dimensions:\n",
+      "[1] = 350.00001148963344\n",
+      "[2] = 0.0\n",
+      "[3] = 5000.0000500051365\n",
+      "w: 1 dimensions:\n",
+      "[1] = 350.00001148963344\n",
+      "[2] = 0.0\n",
+      "[3] = 6000.0\n"
+     ]
+    }
+   ],
+   "source": [
     "# construct problem with PLASMO and solve using Ipopt\n",
     "graph = GraphModel()\n",
     "master = Model()\n",
@@ -89,12 +159,11 @@
     "    setupperbound(w[3], 6000)\n",
     "    setupperbound(y[3], 0)\n",
     "    @objective(bl, Min, 1.0/NS*sum(pcost[j]*y[j] - scost[j]*w[j] for j in P))\n",
-    "\n",
     "    @linkconstraint(graph, [j in P], yield[i,j]*master_node[:x][j]+y[j]-w[j] >= demand[j])\n",
     "end\n",
     "\n",
     "# call Ipopt for solution\n",
-    "graph.solver = IpoptSolver()\n",
+    "graph.solver = IpoptSolver(print_level=0)\n",
     "solve(graph)\n",
     "\n",
     "# access solution and display results\n",
@@ -103,22 +172,31 @@
     "    println(getvalue(getindex(child_nodes[i],:w))) \n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.4.5",
+   "display_name": "Julia 0.5.0",
    "language": "julia",
-   "name": "julia-0.4"
+   "name": "julia-0.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.5"
+   "version": "0.5.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
